# pyd2lang-native

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  adi.html  api.html  clean-shapes.html  clean.html  datax.html  examples.html  genindex.html  index.html  jif-shapes.html  jif.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  shapes.html  skills.html  sw-shapes.html  sw-theme.html  sw.html  theme.html
.agents/skills/professional-ui-design/: SKILL.md
.agents/skills/soft-technical-flowgraphs/: SKILL.md
.github/workflows/: build_wheels.yml  check_d2_update.yml  checks.yml  docs.yml
_sources/: api.rst.txt  index.rst.txt  shapes.rst.txt  theme.rst.txt
d2/: __init__.py
d2/sphinx/: __init__.py  cache.py  directive.py  nodes.py
dev/pr-12/: adi.html  objects.inv  search.html  searchindex.js  shapes.html  sw-theme.html  sw.html
dev/pr-12/_sources/: sw.rst.txt
dev/pr-13/: examples.html  index.html  jif-shapes.html  jif.html  py-modindex.html  searchindex.js
dev/pr-13/_sources/: adi.rst.txt  jif-shapes.rst.txt
dev/pr-14/: searchindex.js
dev/pr-15/: examples.html  genindex.html  jif-shapes.html  jif.html  searchindex.js
dev/pr-15/_sources/: jif-shapes.rst.txt
dev/pr-16/: index.html  py-modindex.html
dev/pr-16/_sources/: index.rst.txt
dev/pr-17/: api.html  datax.html  examples.html  genindex.html  index.html  jif-shapes.html  objects.inv  py-modindex.html  search.html  searchindex.js  skills.html  sw-shapes.html  sw-theme.html  theme.html
dev/pr-18/: adi.html  api.html  clean.html  shapes.html
dev/pr-19/: datax.html  index.html  jif-shapes.html  jif.html  theme.html
dev/pr-20/: clean-shapes.html  jif.html  search.html  skills.html
dev/pr-21/: clean.html  datax.html  genindex.html  index.html  jif-shapes.html  jif.html  py-modindex.html  search.html  skills.html  theme.html
docs/: adi.rst  api.rst  clean-shapes.rst  clean.rst  conf.py  datax.rst  examples.rst  index.rst  jif-shapes.rst  jif.rst  shapes.rst  sw-shapes.rst  sw-theme.rst  theme.rst
lib/: build.bat  build.sh  d2lib.go  go.mod  go.sum
lib/adi/: adi-components.d2  adi-theme-dark.d2  adi-theme.d2
lib/clean/: clean-components.d2  clean-theme-dark.d2  clean-theme.d2
lib/datax/: datax-components.d2  datax-theme-dark.d2  datax-theme.d2
lib/jif/: jif-components.d2  jif-theme-dark.d2  jif-theme.d2
lib/sw/: sw-components.d2  sw-theme-dark.d2  sw-theme.d2
scripts/: check_svg_backgrounds.py  embed-sw-icons.sh  embed_icons.py  extract_adi_icons.py  release.sh  remove_svg_bg.py  update_example_svgs.py
test/: test_check_svg_backgrounds.py  test_d2.py  test_embed_icons.py  test_readme.py  test_sphinx_cache.py  test_sphinx_dark_examples.py  test_sphinx_directive.py  test_sphinx_nodes.py
test/visual-tests/: adi-circuit-dark.d2  adi-circuit.d2  adi-circuit_body.d2  sw-workflow-dark.d2  sw-workflow.d2  sw-workflow_body.d2
(+13 files in other folders)
