[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyd2lang-native"
dynamic = ["version", "readme"]
description = "Python bindings to d2lang"
authors = [{ name = "Travis F. Collins", email = "travis.collins@analog.com" }]
license-files = ["LICENSE", "D2_LICENSE.txt"]
requires-python = ">=3.7"


[tool.setuptools.dynamic]
version = {attr = "d2.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["d2*"]
exclude = ["test*"]
namespaces = true

[tool.setuptools]
py-modules = ["d2"]
zip-safe = false

[tool.setuptools.package-data]
d2 = [
	"resources/*.so",
	"resources/*.dll",
	"resources/*.dylib"
]