[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyd2lang-native"
dynamic = ["version", "readme"]
description = "Python bindings to d2lang"
authors = [{ name = "Travis F. Collins", email = "travis.collins@analog.com" }]
license-files = ["LICENSE", "D2_LICENSE.txt"]
requires-python = ">=3.7"

[project.optional-dependencies]
docs = ["sphinx", "furo", "sphinx-copybutton"]
dev = ["nox", "uv", "ruff", "ty", "pytest"]

[tool.setuptools.dynamic]
version = {attr = "d2.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]
include = ["d2*"]
exclude = ["test*"]
namespaces = true

[tool.setuptools]
py-modules = ["d2"]
zip-safe = false

[tool.setuptools.package-data]
d2 = [
	"resources/*.so",
	"resources/*.lib",
	"resources/*.dll",
	"resources/*.dylib"
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
	"E",    # pycodestyle errors
	"W",    # pycodestyle warnings
	"F",    # pyflakes
	"I",    # isort
	"UP",   # pyupgrade
	"B",    # flake8-bugbear
	"SIM",  # flake8-simplify
	"RUF",  # ruff-specific rules
]
ignore = [
	"E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["d2"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-v"
